# max-bot-solaris

./: .gitignore  README.md
src/: main.py  pyproject.toml
src/alembic/versions/: 1_create_users_table.py
src/app/bitrix/: client.py
src/app/max/: __init__.py  keyboards.py  platform.py  router.py  states.py
src/app/max/handlers/: menu.py  requests.py
src/app/services/: helper.py  lead_requests.py  reminder.py
