[project]
name = "bot-solaris"
version = "0.1.0"
description = "Max bot on aiomax with Bitrix24 lead integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomax>=2.12.4",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.49",
]
